--- a/themes/livemylife/source/css/catalog.styl
+++ b/themes/livemylife/source/css/catalog.styl
@@ -38,7 +38,8 @@
 .toc-nav
   padding 0
   margin 1em
-  line-height 1.8em
+  font-size 1.1em
+  line-height 2em
   li
     list-style-type: none
     a:hover
@@ -55,7 +56,8 @@
 
 .toc-nav-child
   margin-left -1em
-
+.toc-nav-text
+  color #3B3B3B
 #sidebar
   display: inline;
   float: left;
