--- a/themes/livemylife/source/css/highlight.styl
+++ b/themes/livemylife/source/css/highlight.styl
@@ -97,16 +97,17 @@ clearfix()
     clear: both
   zoom: 1 if support-for-ie
 
-line-height = 1.6em
+line-height = 2.6em
 font-size = 14px
 article-padding = 20px
 color-border = #ddd
 
 
-$code-font-size                 = 13px
+$code-font-size                 = 16px
 $code-background                = #eee
 $code-foreground                = #555
 $code-border-radius             = 4px
+
 
 
 // Placeholder: $code-block
@@ -186,7 +187,10 @@ $code-block {
     padding-right: 20px;
   }
 
-  .line { height: 20px; }
+  .line { 
+    height: 20px; 
+    line-height:32px;
+  }
 }
 
 
